# clauke

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/specs/: 2026-03-27-discord-rpc-and-syntax-highlighting-design.md
releases/: clauke_0.1.0_x64_en-US.msi
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude.rs  lib.rs  main.rs
src/lib/: claude.ts  types.ts
src/lib/components/: AgentPanel.svelte  ChangeTracker.svelte  ChatView.svelte  ContextIndicator.svelte  DiffView.svelte  FileEditor.svelte  FileTree.svelte  InputBar.svelte  MessageBubble.svelte  SearchOverlay.svelte  SessionManager.svelte  SettingsPanel.svelte  ShortcutHelp.svelte  TabBar.svelte  TodoPanel.svelte  ToolCallCard.svelte
