[package]
name = "clauke"
version = "0.1.0"
description = "Claude Code Wrapper — a beautiful cloak around Claude"
edition = "2021"

[lib]
name = "clauke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt"] }
tauri-plugin-dialog = "2.6.0"
uuid = { version = "1", features = ["v4"] }
dirs = "6"

[features]
default = []
