[package]
name = "clauke"
version = "0.1.0"
description = "Claude Code Wrapper - a beautiful cloak around Claude"
edition = "2024"

[lib]
name = "clauke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["process", "io-util", "sync", "macros", "rt"] }
tauri-plugin-dialog = "2.6.0"
uuid = { version = "1.22.0", features = ["v4"] }
dirs = "6.0.0"
discord-rich-presence = "1.1.0"

[features]
default = []
